[project]
name = "recipeAI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dhrupad-sah", email = "thedhrupad@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
_.env_file = ".env"
dev = "uvicorn src.recipeai.main:app --host 0.0.0.0 --reload"
start = "uvicorn src.recipeai.main:app --host 0.0.0.0 --port 8000"
